--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@supabase/supabase-js": "^2.91.0",
     "autoprefixer": "^10.4.23",
     "clsx": "^2.1.0",
+    "dotenv": "^17.2.3",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.300.0",
     "next": "^16.1.4",
     "postcss": "^8.5.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-leaflet": "^5.0.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
