--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@capacitor/ios": "^8.0.2",
     "@capacitor/preferences": "^8.0.0",
     "@supabase/ssr": "^0.8.0",
-    "@supabase/supabase-js": "^2.91.0",
+    "@supabase/supabase-js": "^2.93.3",
     "@tanstack/react-query": "^5.90.20",
     "autoprefixer": "^10.4.23",
     "clsx": "^2.1.0",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.29.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.300.0",
     "next": "^16.1.4",
