--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query": "^5.90.20",
     "autoprefixer": "^10.4.23",
     "clsx": "^2.1.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.29.2",
     "leaflet": "^1.9.4",
@@ -28,6 +29,7 @@
     "next": "^16.1.4",
     "postcss": "^8.5.6",
     "react": "^19.2.3",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.2.3",
     "react-leaflet": "^5.0.0",
     "tailwindcss": "^4.1.18"
