--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.300.0",
     "next": "^16.1.4",
+    "openai": "^6.21.0",
     "postcss": "^8.5.6",
     "react": "^19.2.3",
     "react-confetti": "^6.4.0",
