--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@supabase/supabase-js": "^2.93.3",
     "@tanstack/react-query": "^5.90.20",
     "autoprefixer": "^10.4.23",
+    "canvas-confetti": "^1.9.4",
     "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
