--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "^16.1.4"
+    "eslint-config-next": "^16.1.4",
+    "prettier": "^3.8.1",
+    "prettier-plugin-tailwindcss": "^0.7.2"
   }
 }
