--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@capacitor/ios": "^8.0.2",
     "@capacitor/preferences": "^8.0.0",
     "@capacitor/push-notifications": "^8.0.1",
+    "@capawesome-team/capacitor-android-foreground-service": "^8.0.1",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.93.3",
     "@tanstack/react-query": "^5.90.20",
