Native Android foreground service: system-native UI, two-state API (workout/gym), lock screen visibility fix

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -28,10 +28,9 @@
             <meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths" />
         </provider>
 
-        <!-- Foreground Service Registration -->
-        <receiver android:name="io.capawesome.capacitorjs.plugins.foregroundservice.NotificationActionBroadcastReceiver" />
+        <!-- Custom Foreground Service Registration -->
         <service 
-            android:name="io.capawesome.capacitorjs.plugins.foregroundservice.AndroidForegroundService" 
+            android:name=".IronCircleWorkoutService" 
             android:enabled="true" 
             android:exported="false" 
             android:foregroundServiceType="specialUse">
